<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6F6F1"
    tools:context=".MainActivity">

    <View
        android:id="@+id/viewHeaderbackground"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/thumbnail_height"
        android:layout_marginBottom="18sp"
        android:background="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="132sp"
        android:layout_height="42sp"
        android:layout_marginStart="140sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="141sp"
        android:layout_marginBottom="100sp"
        android:text="@string/smartpark"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/viewHeaderbackground"
        app:layout_constraintEnd_toEndOf="@+id/viewHeaderbackground"
        app:layout_constraintStart_toStartOf="@+id/viewHeaderbackground"
        app:layout_constraintTop_toTopOf="@+id/viewHeaderbackground"
        app:layout_constraintVertical_bias="0.4" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="16sp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="16sp"
        app:layout_constraintBottom_toBottomOf="@id/viewHeaderbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeaderbackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14sp"
            android:paddingTop="14sp">

            <LinearLayout
                android:id="@+id/layoutClient"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/layoutImpact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViews">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/light"
                    android:layout_width="58sp"
                    android:layout_height="58sp"
                    android:src="@drawable/idea1" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="150sp"
                    android:layout_height="15sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="10sp"
                    android:showText="true"
                    android:text="@string/light"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:thumb="@drawable/thumb" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off3"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0sp"
                    android:text="@string/khu_v_c_1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutImpact"
                android:layout_width="165dp"
                android:layout_height="161dp"
                android:layout_marginTop="8sp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layoutClient"
                app:layout_constraintTop_toBottomOf="@+id/textViews"
                app:layout_constraintVertical_bias="1.0">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/light2"
                    android:layout_width="58sp"
                    android:layout_height="58sp"
                    android:src="@drawable/idea1" />

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="150sp"
                    android:layout_height="20sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="10sp"
                    android:showText="true"
                    android:text="@string/light"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:thumb="@drawable/thumb" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="43sp"
                    android:layout_height="wrap_content"
                    android:text="@string/off3"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0sp"
                    android:text="@string/khu_v_c_2"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="200sp"
                android:text="@string/shot_view"
                android:textColor="@color/design_default_color_primary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/layoutClient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="327sp"
        android:layout_marginBottom="100sp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="16sp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardHeader"
        app:layout_constraintVertical_bias="0.056">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <include
                android:id="@+id/khuvuc1"
                layout="@layout/item1"
                android:layout_width="match_parent"
                android:layout_height="113sp"
                android:layout_marginBottom="5sp"/>

            <include
                android:id="@+id/khuvuc2"
                layout="@layout/item2"
                android:layout_width="match_parent"
                android:layout_height="115sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="73sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonon"
                    android:layout_width="14sp"
                    android:layout_height="62sp"
                    android:layout_marginEnd="10sp"
                    android:layout_weight="@integer/google_play_services_version"
                    android:text="@string/time_on" />

                <Button
                    android:id="@+id/buttonoff"
                    android:layout_width="20sp"
                    android:layout_height="60sp"
                    android:layout_marginLeft="10sp"
                    android:layout_weight="@integer/google_play_services_version"
                    android:text="@string/time_off" />

                <Switch
                    android:id="@+id/switch4"
                    android:layout_width="94sp"
                    android:layout_height="52sp"
                    android:layout_gravity="center"

                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:thumb="@drawable/thumb2" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tatden"
            android:layout_width="107sp"
            android:layout_height="44sp"
            android:layout_marginStart="100sp"
            android:layout_marginBottom="10sp"
            android:text="Time OFF:"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeHour1"
            android:layout_width="61sp"
            android:layout_height="48sp"
            android:layout_marginBottom="10sp"
            android:hint="@string/hour"
            android:inputType="text"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/timeMinute1"
            android:layout_width="129sp"
            android:layout_height="48sp"
            android:layout_marginEnd="0sp"
            android:layout_marginBottom="10sp"
            android:hint="Minute"
            android:inputType="text"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="408sp"
        android:layout_height="42sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <TextView
            android:id="@+id/sangden"
            android:layout_width="106sp"
            android:layout_height="42sp"
            android:layout_marginStart="100sp"
            android:layout_marginBottom="10sp"
            android:text="Time On:"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeHour"
            android:layout_width="62sp"
            android:layout_height="42sp"
            android:layout_marginStart="0sp"
            android:layout_marginTop="0sp"
            android:layout_marginEnd="0sp"
            android:layout_marginBottom="10sp"
            android:hint="Hour"
            android:inputType="text"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/timeMinute"
            android:layout_width="124sp"
            android:layout_height="42sp"
            android:layout_marginTop="0sp"
            android:layout_marginEnd="96sp"
            android:layout_marginBottom="10sp"
            android:hint="Minute"
            android:inputType="text"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>